move client to properties

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     ports:
       - '5432:5432'
     environment:
-      POSTGRES_DB: clients_db
+      POSTGRES_DB: users_db
       POSTGRES_USER: ${PRODUCTS_DATASOURCE_USERNAME:-postgres}
       POSTGRES_PASSWORD: ${PRODUCTS_DATASOURCE_PASSWORD:-password}
     volumes:
