--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,20 +1,24 @@
 spring:
-#  security:
-#    oauth2:
-#      authorizationserver:
-#        client:
-#          client-1:
-#            registration:
-#              client-id: "client"
-#              client-secret: "{bcrypt}$2a$10$jdJGhzsiIqYFpjJiYWMl/eKDOd8vdyQis2aynmFN0dgJ53XvpzzwC"
-#              client-authentication-methods: "client_secret_basic"
-#              authorization-grant-types: "client_credentials,authorization_code,refresh_token"
-#              redirect-uris: "http://127.0.0.1:8082/login/oauth2/code/spring"
-#              scopes: "user.read,user.write,openid"
-#            require-authorization-consent: true
+  security:
+    oauth2:
+      authorizationserver:
+        client:
+          client-1:
+            registration:
+              client-id: "client"
+              client-secret: "secret"
+              client-authentication-methods:
+                - "client_secret_basic"
+              authorization-grant-types:
+                - "authorization_code"
+              redirect-uris:
+                - "https://oauthdebugger.com/debug"
+              scopes:
+                - "openid"
+            require-authorization-consent: true
 
   datasource:
-    url: ${DATASOURCE_URL:jdbc:postgresql://localhost:5432/clients_db}
+    url: ${DATASOURCE_URL:jdbc:postgresql://localhost:5432/users_db}
     username: ${DATASOURCE_USERNAME:postgres}
     password: ${DATASOURCE_PASSWORD:password}
 
