--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,6 @@
+server:
+  port: 9000
+
 spring:
   security:
     oauth2:
@@ -6,13 +9,15 @@ spring:
           client-1:
             registration:
               client-id: "client"
-              client-secret: "secret"
+              client-secret: "{bcrypt}$2a$10$jdJGhzsiIqYFpjJiYWMl/eKDOd8vdyQis2aynmFN0dgJ53XvpzzwC"
               client-authentication-methods:
                 - "client_secret_basic"
               authorization-grant-types:
+                - "client_credentials"
                 - "authorization_code"
+                - "refresh_token"
               redirect-uris:
-                - "https://oauthdebugger.com/debug"
+                - "http://localhost:8080/login/oauth2/code/spring"
               scopes:
                 - "openid"
             require-authorization-consent: true
