--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,7 +9,7 @@ spring:
           client-1:
             registration:
               client-id: "client"
-              client-secret: "{bcrypt}$2a$10$jdJGhzsiIqYFpjJiYWMl/eKDOd8vdyQis2aynmFN0dgJ53XvpzzwC"
+              client-secret: "{noop}secret"
               client-authentication-methods:
                 - "client_secret_basic"
               authorization-grant-types:
@@ -20,6 +20,8 @@ spring:
                 - "http://localhost:8080/login/oauth2/code/spring"
               scopes:
                 - "openid"
+                - "user.read"
+                - "user.write"
             require-authorization-consent: true
 
   datasource:
@@ -35,4 +37,4 @@ spring:
     baseline-on-migrate: true
 logging:
   level:
-    '[org.springframework.boot]': TRACE
+    '[org.springframework.security]': TRACE
