--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,6 +2,9 @@ server:
   port: 9000
 
 spring:
+  application:
+    name: auth-server
+
   security:
     oauth2:
       authorizationserver:
@@ -31,7 +34,6 @@ spring:
 
   jpa:
     generate-ddl: true
-
   flyway:
     enabled: false
     baseline-on-migrate: true
